# Hermes_layer

./: CMakeLists.txt  README.md
cmake/: External_ANTLR.cmake  External_AWSCPPSDK.cmake  External_arrow.cmake  External_thrift.cmake
fpdb-aws/: CMakeLists.txt
fpdb-aws/src/: S3Util.cpp
fpdb-caf/include/fpdb/caf/: CAFUtil.h
fpdb-calcite/cpp/: CMakeLists.txt
fpdb-calcite/cpp/gen-cpp/: CalciteServer.cpp  CalciteServer.h  CalciteServer_types.cpp  CalciteServer_types.h
fpdb-calcite/cpp/non_block/: NonBlockingServerTest.cpp
fpdb-calcite/cpp/src/: CalciteClient.cpp
fpdb-calcite/java/: pom.xml
fpdb-catalogue/: CMakeLists.txt
fpdb-catalogue/include/fpdb/catalogue/: CatalogueEntry.h  Partition.h  Table.h
fpdb-catalogue/include/fpdb/catalogue/local-fs/: LocalFSCatalogueEntry.h  LocalFSPartition.h  LocalFSTable.h
fpdb-catalogue/include/fpdb/catalogue/s3/: S3CatalogueEntry.h  S3CatalogueEntryReader.h  S3Partition.h  (+1 more)
fpdb-catalogue/src/: Table.cpp
fpdb-catalogue/src/local-fs/: LocalFSCatalogueEntry.cpp  LocalFSPartition.cpp  LocalFSTable.cpp
fpdb-catalogue/src/s3/: S3CatalogueEntry.cpp  S3CatalogueEntryReader.cpp  S3Partition.cpp  S3Table.cpp
fpdb-delta/: CMakeLists.txt  README.md
fpdb-delta/include/fpdb/delta/: DeltaCache.h  DeltaCacheData.h  DeltaCacheKey.h  DeltaCacheMetadata.h  KeepMapCache.h  KeepMapCacheData.h  KeepMapCacheKey.h  StableBmCache.h  StableBmCacheData.h  StableBmCacheKey.h
fpdb-delta/src/: DeltaCache.cpp  DeltaCacheData.cpp  DeltaCacheKey.cpp  KeepMapCache.cpp  KeepMapCacheData.cpp  KeepMapCacheKey.cpp  StableBmCache.cpp  StableBmCacheData.cpp  StableBmCacheKey.cpp
fpdb-executor/: CMakeLists.txt
fpdb-executor/include/fpdb/executor/: Execution.h  Executor.h
fpdb-executor/src/: Execution.cpp  Executor.cpp
fpdb-executor/src/cache/: SegmentCacheActor.cpp
fpdb-executor/src/delta/: DeltaCacheActor.cpp  DeltaPumpHelper.cpp  PeriodicGetTailHandler.cpp
fpdb-executor/src/message/delta/: LoadDeltaRequestMessage.cpp  LoadDeltaResponseMessage.cpp  LoadDiskDeltasResponseMessage.cpp  MergedDeltaMessage.cpp  StoreDeltaRequestMessage.cpp
fpdb-executor/src/physical/: POpContext.cpp
fpdb-executor/src/physical/aggregate/: AggregatePOp.cpp
fpdb-executor/src/physical/collate/: CollatePOp.cpp
fpdb-executor/src/physical/deltacache/: CacheHandlerPOp.cpp
fpdb-executor/src/physical/deltamerge/: DeleteMapGeneratorKernel.cpp  DeltaMergeFilter.cpp  DeltaMergePOp.cpp  KeepMapCacheMode.cpp  ResultGeneratorKernel.cpp
fpdb-executor/src/physical/filter/: FilterPOp.cpp
fpdb-executor/src/physical/group/: GroupPOp.cpp
fpdb-executor/src/physical/merge/: MergePOp.cpp
fpdb-executor/src/physical/project/: ProjectPOp.cpp
fpdb-executor/src/physical/s3/: S3GetPOp.cpp  S3SelectScanAbstractPOp.cpp  test.cpp
fpdb-executor/src/physical/sort/: SortPOp.cpp
fpdb-executor/src/physical/transform/: PrePToPTransformer.cpp  PrePToS3PTransformer.cpp
fpdb-executor/test/: testGandivaOrder.cpp
fpdb-expression-gandiva/: CMakeLists.txt
fpdb-expression-gandiva/src/: Filter.cpp
fpdb-expression/include/fpdb/expression/: Filter.h
fpdb-hermesserver/: CMakeLists.txt
fpdb-hermesserver/gen-cpp/: HermesDuckDBServer.cpp  HermesDuckDBServer.h  HermesDuckDBServer_server.skeleton.cpp  HermesDuckDBServer_types.h
fpdb-hermesserver/include/fpdb/hermesserver/: HermesServerHandler.h  Server.h
fpdb-hermesserver/src/: HermesServerHandler.cpp  Server.cpp
fpdb-hermesserver/thrift/: HermesDuckDBServer.thrift
fpdb-logparser/cpp/: CMakeLists.txt
fpdb-logparser/cpp/gen-cpp/: LogParserServer.cpp  LogParserServer.h  LogParserServer_server.skeleton.cpp  LogParserServer_types.cpp  LogParserServer_types.h
fpdb-logparser/cpp/include/deltapump/: BinlogParser.h  customer_d.hh  date_d.hh  history_d.hh  lineorder_d.hh  makeTuple.h  part_d.hh  supplier_d.hh
fpdb-logparser/cpp/include/deltapump/rangeFile/: globalMins
fpdb-logparser/cpp/include/deltapump/schemas/delta/: customer_d.json  date_d.json  history_d.json  lineorder_d.json  part_d.json  supplier_d.json
fpdb-logparser/cpp/include/fpdb/logparser/: LogParserClient.h
fpdb-logparser/cpp/src/: LogParserClient.cpp
fpdb-logparser/cpp/src/deltapump/: BinlogParser.cpp  makeTuple.cpp
fpdb-logparser/cpp/test/: parserTest.cpp
fpdb-logparser/java/: dependency-reduced-pom.xml  pom.xml
fpdb-logparser/thrift/: LogParserServer.thrift
fpdb-main/: CMakeLists.txt
fpdb-main/include/fpdb/main/: ActorSystemConfig.h  Client.h  ExecConfig.h
fpdb-main/src/: CAFInit.cpp  Client.cpp  Server.cpp
fpdb-main/test/: HTAP-SF1-Test.cpp  HTAP-SF10-Test.cpp  HTAP-SF50-SmallPartitions-Test.cpp  HTAP-SF50-Test.cpp  HTAPValTest.cpp  OnePartitionSSB.cpp  TestUtil.cpp  TestUtil.h  test.cpp
fpdb-tuple/include/fpdb/tuple/: Globals.h
fpdb-tuple/src/: Converter.cpp  TupleSet.cpp
fpdb-tuple/src/serialization/: ArrowSerializer.cpp
fpdb-tuple/test/: ParquetTest.cpp
resources/config/: exec.conf
resources/metadata/hattrick-sf10/csv/: schema.json  stats.json  zoneMap.json
resources/metadata/hattrick-sf10/parquet/: schema.json  stats.json  zoneMap.json
resources/metadata/hattrick-sf50-smallpartitions/parquet/: schema.json  stats.json  zoneMap.json
resources/metadata/hattrick-sf50/parquet/: schema.json  stats.json  zoneMap.json
resources/metadata/one-partition-ssb/csv/: schema.json  stats.json  zoneMap.json
resources/metadata/ssb-sf1-htap/csv/: schema.json  stats.json  zoneMap.json
resources/metadata/ssb-sf1-sortlineorder/csv/: schema.json
resources/metadata/ssb-sf10-sortlineorder/csv/: schema.json
resources/metadata/ssb-sf100-sortlineorder/csv/: schema.json
resources/metadata/ssb-sf100-sortlineorder/csv_150MB/: schema.json
resources/metadata/ssb-sf100-sortlineorder/csv_150MB_initial_format/: schema.json
resources/metadata/ssb-sf100-sortlineorder/parquet/: schema.json
resources/metadata/ssb-sf100-sortlineorder/parquet_150MB/: schema.json
resources/metadata/tpch-sf0.01/csv/: schema.json
resources/metadata/tpch-sf10/csv/: schema.json
resources/query/ssb/original/: 1.2.sql  1.sql
resources/query/ssb/test/: 1.sql  3.sql
(+45 files in other folders)
